--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h2>🎥 Watch the 2-Minute Tutorial</h2>
       <div class="video-container">
         <video controls>
-      <source src="tutorial.mp4" type="video/mp4">
+      <source src="DocDynamo.mp4" type="video/mp4">
       Your browser does not support the video tag.
         </video>
       </div>
