--- a/index.html
+++ b/index.html
@@ -59,19 +59,21 @@
       </details>
       <details>
         <summary>How it is better from our LLMs</summary>
-        <p>With LLMs, Answers get worse the more context I add or Why am I paying so much just to pass all this data to the model? or Even with 1M context window, it's still hallucinating! Inshort, More is not always the best. With DocDynamo you can now use it as your personal GPT giving it only the database you want in the app making it cost-effective, computationally effective and more context-relevant answers. </p>
+        <p>With LLMs, Answers get worse the more context I add or Why am I paying so much just to pass all this data to the model? or Even with 1M context window, it's still hallucinating! Inshot, MORE IS NOT ALWAYS THE BEST. With DocDynamo you can now use it as your personal GPT giving it only the database you want in the app making it cost-effective, computationally effective and more context-relevant answers. </p>
       </details>
     </section>
+
     <section id="video">
-      <h2>🎥 Watch the 2-Minute Tutorial</h2>
-      <div class="video-container">
-        <video controls>
+  <h2>🎥 Watch the 2-Minute Tutorial</h2>
+  <div class="video-container">
+    <video controls>
       <source src="DocDynamo.mp4" type="video/mp4">
       Your browser does not support the video tag.
-        </video>
-      </div>
+    </video>
+  </div>
 </section>
-</main>
+
+  </main>
 
   <footer>
     <p>Made with ❤️ by the DocDynamo Team</p>
