--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
       </details>
     </section>
 
+    <section class="video-section">
+      <h2>🎥 Watch the 2-Minute Tutorial</h2>
+      <video controls>
+        <source src="tutorial.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </section>
+    
   </main>
 
   <footer>
