--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
     </section>
 
     <section class="video-section">
-      <h2>🎥 Watch the 2-Minute Tutorial</h2>
-      <video controls>
-        <source src="tutorial.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+  <h2>🎥 Watch the 2-Minute Tutorial</h2>
+  <video controls>
+    <source src="tutorials/docdynamo.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
     </section>
+
     
   </main>
 
